Completely refactored CompetitorGrid.js - Made CompetitorGrid a proper class with a constructor, properties, and   methods - Fixed readability issues by using self instead of _this for   maintaining scope in the class - Changed sorters to be a dictionary of methods with keys corresponding   to the data-sortkey property on headings in index.html - Added minRows property for declaring the minimum grid size - Added container property for the grid (and made all relevant elements   have classes based off of this container instead of having unique id   attributes for each of them) - Modified index.html and ambition-all.css to coincide with these   changes

--- a/static/ambition/css/ambition-all.css
+++ b/static/ambition/css/ambition-all.css
@@ -39,26 +39,26 @@ td:first-child, th:first-child {
 	border-left: none;
 }
 
-#competitor-table-container {
+.grid-container {
 	width: 800px;
 	background-color: white;
 	margin: 0 auto;
 }
 
-#competitor-table-title {
+.grid-title {
 	font-size: 24px;	
 	font-weight: normal;
 	border-top: none;
 }
 
-#competitor-table-heading th {
+.grid-heading th {
 	cursor: pointer;
 	box-shadow: 0px 2px 5px -1px #bbb;
 	-moz-box-shadow: 0px 2px 5px -1px #bbb;
 	-webkit-box-shadow: 0px 2px 5px -1px #bbb;
 }
 
-#competitor-table-summary {
+.grid-summary {
 	font-size: 18px;
 	color: #999;
 }
